name:           gaem
version:        0.1.0.0
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

library
  exposed-modules:
      Game, Gloss
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5, mtl, gloss, mmorph
  default-language: Haskell2010

executable gaem-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
